Fixed TODO in XmlConfiguration and added test case.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>